Chris - DevOrg/src/objects/Time_Card__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours_Remaining__c</fullName>
        <description>Remaining hours on task</description>
        <label>Estimated Hours Remaining</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <description>Number of hours worked on this task</description>
        <label>Hours Worked</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Time Cards</relationshipLabel>
        <relationshipName>Time_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <description>Week Ending is Friday of that week</description>
        <label>Week Ending</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Time Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Project__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>Hours_Worked__c</columns>
        <columns>Estimated_Hours_Remaining__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Time Card ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Week_Ending_Date_must_be_a_Friday</fullName>
        <active>true</active>
        <description>For Time Cards, the Week Ending Date must be a Friday</description>
        <errorConditionFormula>CASE(MOD(  Week_Ending__c  - DATE(1900, 1, 7), 7),
5, 1,
0) = 0</errorConditionFormula>
        <errorDisplayField>Week_Ending__c</errorDisplayField>
        <errorMessage>Week ending date must be a Friday</errorMessage>
    </validationRules>
</CustomObject>